--- a/JobPlanner/Views/Home/Index.cshtml
+++ b/JobPlanner/Views/Home/Index.cshtml
@@ -36,6 +36,7 @@
     else
     {
         <p>Hello Guest! Please log in or register to access the site.</p>
+        <p>Default admin is <b>admin@localhost</b> with password <b>admin</b></p>
     }
 
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
