--- a/JobPlanner/Views/Locations/Details.cshtml
+++ b/JobPlanner/Views/Locations/Details.cshtml
@@ -9,6 +9,15 @@
 <div>
     <h4>Location</h4>
     <hr />
+    @if (Model.Image != null)
+    {
+        <img height="100" src="data:image;base64,@Convert.ToBase64String(Model.Image)" />
+    }
+    else
+    {
+        <img height="150px" src="~/assets/images/NoLocation.png" />
+    }
+
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
@@ -28,14 +37,45 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Description)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Image)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Image)
-        </dd>
     </dl>
 </div>
+
+<h4>Employees</h4>
+
+@if (ViewBag.emp == null || ViewBag.emp.Count == 0)
+{
+    <p>No employees found. Edit page to add them.
+    </p>
+}
+else
+{
+    @foreach(Employee emp in ViewBag.emp)
+    {
+        <div>
+            <dl class="row">
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => emp.FirstName)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => emp.FirstName)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => emp.LastName)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => emp.LastName)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => emp.PhoneNumber)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => emp.PhoneNumber)
+                </dd>
+            </dl>
+        </div>
+    }
+}
+
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
