--- a/JobPlanner/Views/Locations/Edit.cshtml
+++ b/JobPlanner/Views/Locations/Edit.cshtml
@@ -43,30 +43,33 @@
 <button class="btn">Add</button>
 
 <h4>Employees</h4>
-@foreach (Employee emp in ViewBag.emp)
+@if (ViewBag.emp != null)
 {
-    <div>
-        <dl class="row">
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => emp.FirstName)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => emp.FirstName)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => emp.LastName)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => emp.LastName)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => emp.PhoneNumber)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => emp.PhoneNumber)
-            </dd>
-        </dl>
-    </div>
+    @foreach (Employee emp in ViewBag.emp)
+    {
+        <div>
+            <dl class="row">
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => emp.FirstName)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => emp.FirstName)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => emp.LastName)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => emp.LastName)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => emp.PhoneNumber)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => emp.PhoneNumber)
+                </dd>
+            </dl>
+        </div>
+    }
 }
 
 <div>
