--- a/JobPlanner/Views/UserManagement/Edit.cshtml
+++ b/JobPlanner/Views/UserManagement/Edit.cshtml
@@ -13,19 +13,17 @@
             <input type="hidden" asp-for="User.Id" />
             <div class="form-group">
                 <label asp-for="User.UserName" class="control-label"></label>
-                <input asp-for="User.UserName" class="form-control" />
+                <input asp-for="User.UserName" class="form-control" readonly />
                 <span asp-validation-for="User.UserName" class="text-danger"></span>
             </div>
             <br />
             <div class="form-group">
                 <label asp-for="User.Email" class="control-label"></label>
-                <input asp-for="User.Email" class="form-control" />
+                <input asp-for="User.Email" class="form-control" readonly />
                 <span asp-validation-for="User.Email" class="text-danger"></span>
             </div>
             <br />
-            <h6>Roles in system</h6>
-
-
+            <h4>Roles in system</h4>
             @for (int i = 0; i < Model.UserRoles.Count(); i++)
             {
                 <div class="form-group">
@@ -34,6 +32,17 @@
                     <label asp-for="UserRoles[i].UserRole" class="control-label">@Model.UserRoles[i].UserRole</label>
                 </div>
             }
+            <br />
+            <h4>User Locations</h4>
+            @for (int j = 0; j < Model.UserLocations.Count(); j++)
+            {
+                <div class="form-group">
+                    <input type="hidden" asp-for="UserLocations[j].Location.Id" value="@Model.UserLocations[j].Location.Id" />
+                    <input asp-for="UserLocations[j].IsSelected" type="checkbox" class="form-check-input" />
+                    <label asp-for="UserLocations[j].Location.Name" class="control-label">@Model.UserLocations[j].Location.Name</label>
+                </div>
+            }
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
